[package]
name = "towers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
lazy_static = "1.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"